--- a/examMessage/src/page/main/main.css
+++ b/examMessage/src/page/main/main.css
@@ -6,22 +6,23 @@
 
 :global .home_wrapper .home_header {
   width: 100%;
-  height: 50px;
+  height: 64px;
   padding: 0 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #fff;
 }
 
 :global .home_wrapper .home_header .home_logo {
   width: 160px;
-  line-height: 50px;
+  line-height: 64px;
 }
 
 :global .home_wrapper .home_header .home_logo img {
   width: 100%;
   height: 30px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 :global .home_wrapper .home_content {
