--- a/examMessage/src/page/main/main.scss
+++ b/examMessage/src/page/main/main.scss
@@ -3,21 +3,22 @@
         width:100%;
         height:100%;
         overflow: hidden;
+       
         .home_header{
             width:100%;
-            height:50px;
+            height:64px;
             padding:0 50px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background: #fff;
             .home_logo{
                 width:160px;
-                line-height: 50px;
+                line-height: 64px;
                 img{
                     width:100%;
                     height:30px;
-                    margin-top:30px;
-
+                    margin-top:10px;
                 }
             }
         }
@@ -29,6 +30,7 @@
             .home_right{
                 flex:1;
                 overflow: hidden;
+                
             }
 
         }   
