--- a/manage/src/pages/main/main.css
+++ b/manage/src/pages/main/main.css
@@ -1,7 +1,8 @@
 .layout{
     width: 100%;
     height: 100%;
-   overflow: hidden;
+    overflow: hidden;
+    background: #eee;
 }
 .header{
     width: 100%;
@@ -61,6 +62,18 @@
    flex: 1;
    overflow-y: auto;
 }
+.content>div{
+    width: 100%;
+    height: 100%;
+    padding: 0 24px 24px;
+    display: flex;
+    flex-direction: column;
+}
 a{
     color:#000;
   }
+
+h2{
+    padding: 20px 0;
+    margin-top:10px;
+}
