--- a/manage/src/pages/main/question/question.scss
+++ b/manage/src/pages/main/question/question.scss
@@ -1,15 +1,3 @@
-.add_question{
-    width: 100%;
-    height: 100%;
-    padding: 0 24px 24px;
-    background: #eee;
-    display: flex;
-    flex-direction: column;
-}
-.top{
-    padding: 20px 0px;
-    margin-top:10px;
-}
 .question_content{
     flex: 1;
     background: #fff;
@@ -24,6 +12,7 @@
     border:none;
     background: skyblue;
     border-radius: 4px;
+    margin-top:20px;
 }
 input{
     width: 100%;
@@ -31,15 +20,13 @@ input{
     border:1px solid #aaa;
     padding-left: 10px;
 }
-.label{
-    margin:10px 0;
+.ipt{
+    width: 500px;
+    height: 40px;
 }
-.editor{    
-    
-    margin:10px 0;
-}
-.ant_from_item{
-    font-size: 14px;
-    margin-bottom:24px;
-    color: rgba(0, 0, 0, 0.65);
+.watch_content{
+    padding: 24px;
+    background: #fff;
+    margin: 0 0 20px;
+    border-radius: 10px;
 }
