--- a/manage/src/pages/main/question/question.scss
+++ b/manage/src/pages/main/question/question.scss
@@ -25,8 +25,34 @@ input{
     height: 40px;
 }
 .watch_content{
+    width: 100%;
     padding: 24px;
     background: #fff;
     margin: 0 0 20px;
     border-radius: 10px;
+}
+.watch_list{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+}
+.watch_list_infor{
+    width: 90%;
+}
+.watch_list_infor div{
+    margin-top:10px;
+}
+.watch_list:hover{
+   background:#eee;
+}
+.watch_list span{
+    color:blue;
+}
+:global{
+    a{
+       text-decoration: none;
+       list-style-type:none；
+    }
 }
