--- a/manage/src/pages/main/main.css
+++ b/manage/src/pages/main/main.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background: #eee;
+    background: #f0f2f5;
 }
 .header{
     width: 100%;
@@ -60,14 +60,18 @@
 
 .content{
    flex: 1;
+   height: 100%;
    overflow-y: auto;
 }
 .content>div{
     width: 100%;
     height: 100%;
     padding: 0 24px 24px;
-    display: flex;
-    flex-direction: column;
+}
+.content>div>div{
+    width: 100%;
+    height: 100%;
+    padding: 0 24px 24px;
 }
 a{
     color:#000;
@@ -76,4 +80,19 @@ a{
 h2{
     padding: 20px 0;
     margin-top:10px;
+}
+input{
+    border:1px solid #aaa!important;
+}
+.loading{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, .3);
+  z-index:999 
 }
