--- a/manage/src/pages/main/question/question.scss
+++ b/manage/src/pages/main/question/question.scss
@@ -10,49 +10,18 @@
     height: 40px;
     outline: none;
     border:none;
-    background: skyblue;
+    background: #0139FD;
     border-radius: 4px;
     margin-top:20px;
 }
-input{
-    width: 100%;
-    height: 40px;
-    border:1px solid #aaa;
-    padding-left: 10px;
-}
+
 .ipt{
     width: 500px;
     height: 40px;
 }
 .watch_content{
-    width: 100%;
     padding: 24px;
     background: #fff;
     margin: 0 0 20px;
     border-radius: 10px;
-}
-.watch_list{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding: 10px 0;
-}
-.watch_list_infor{
-    width: 90%;
-}
-.watch_list_infor div{
-    margin-top:10px;
-}
-.watch_list:hover{
-   background:#eee;
-}
-.watch_list span{
-    color:blue;
-}
-:global{
-    a{
-       text-decoration: none;
-       list-style-type:none；
-    }
 }
