--- a/manage/src/components/header/header.scss
+++ b/manage/src/components/header/header.scss
@@ -27,6 +27,7 @@
     display: inline-block;
     border-radius: 50%;
     margin-right: 10px;
+    overflow: hidden;
 }
 .avatar img{
     width: 100%;
@@ -42,15 +43,17 @@
     background: #eee;
 }
 .ipt{
-    border:0!important;
     outline: none;
+   
+    border:0!important;
 }
 .chooseImg{
     display:block;
     width: 100px;
-    height: 100px;
+    height:100px;
     border-radius: 50%;
     overflow: hidden;
+    border:0;
 }
 .chooseImg img{
     width: 100%;
