--- a/easyshop/src/views/pages/my/addressdetail/index.scss
+++ b/easyshop/src/views/pages/my/addressdetail/index.scss
@@ -1,8 +1,8 @@
 #addressPage {
-  margin-top:1rem;
   .addressList {
     background-size: auto 5px;
     padding-top: .08rem;
+    margin-top:1rem;
     background: url('../../../../static/img/line.png') repeat-x;
     .addressItem {
       height: 1.6rem;
@@ -88,20 +88,21 @@
 }
 .onePx_bottom{
   position: relative;
+  font-size: .35rem;
   .addressInput{
     width: 100%;
     height: 1rem;
     line-height: 1rem;
     border: none;
     outline: none;
-    margin-top: 1px;
-    text-indent: 1em;
+    margin-top: .01rem;
+    text-indent: .4rem;
   }
   .chooseAddress{
     height: 1rem;
     line-height: 1rem;
     margin-top: 1px;
-    text-indent: 1em;
+    text-indent: .4rem;
     background: #fff;
   }
   .isDefaultAddress{
@@ -109,13 +110,13 @@
     justify-content: center;
     align-items: center;
     height: 1rem;
-     background: #fff;
+    background: #fff;
     line-height: 1rem;
     margin-top: 1px;
     img{
+        width: 6%;
         margin-left: 5px;
         display: inline;
-        width:.4rem;
     }
   }
 }
